# cp2k_ase_plugin

./: README.md  pyproject.toml
cp2k/: __init__.py  _ase_plugin.py  cp2k_ase_plugin.py
cp2k_plugin/: __init__.py  _ase_plugin.py  cp2k_ase_plugin.py
doc/: api_reference.md  calculator_options.md  conf.py  examples.md  index.md  installation.md  quickstart.md
tests/: test_cp2k_H2_None.py  test_cp2k_dcd.py  test_cp2k_many.py  test_cp2k_restart.py  test_cp2k_stress.py  test_plugin.py
